# EcoSim

./: .gitignore  BUILDING.md  CLAUDE.md  CMakeLists.txt  EcoSim  README.md  comp.sh  comp_imgui.sh  comp_ncurses.sh  comp_sdl.sh  general_stats.csv
.roo/rules/: code-comments.md  documentation-organization.md  markdown-formatting.md
cmake/: CompilerWarnings.cmake
docs/: README.md  Untitled.md
docs/code-review/issues/: high-priority.md
docs/future/: README.md  blocking-issues.md  feeding-system-improvements.md
docs/future/behavior/: README.md  extensions.md  mating-behavior-system-design.md  sensory-phases.md
docs/future/combat/: extensibility.md
docs/future/environment/: README.md  ecosystem-improvements.md  world-roadmap.md
docs/future/genetics/: README.md  godk.md  improvements.md  neurodevelopment.md  omnivore-specialization.md  unified-organism-genome.md
docs/future/infrastructure/: README.md  chronicle-and-species-registry.md  logger-statistics.md  multi-threading.md  nlp-integration.md
docs/future/plants/: README.md  propagule-genes.md  resource-system.md
docs/future/ui/: README.md  improvements.md  visibility-systems.md
docs/game-concepts/: README.md  ark-monster-collecting.md  dominion-tribal.md  genesis-god-sim.md  tg-evolution-games.md
docs/plans/: README.md  handoff-organism-linking-bug.md
docs/reference/: README.md  belief-systems-and-god-games.md  creature-cognition-and-social-scaling.md  ecs-vs-oo-for-agent-sims.md  historical-narrative-generation.md  procedural-creature-appearance.md
docs/technical/: README.md
docs/technical/core/: 01-architecture.md  02-getting-started.md  03-extending.md  README.md
docs/technical/design/: README.md  coevolution-design.md  coevolution.md  corpse-value-calculations.md  creature-prefabs.md  organism.md  prefab-design.md  prefab.md  propagation-design.md  propagation.md  resource-allocation-design.md  resource-allocation.md  world-generation.md  world-organism-integration.md
docs/technical/reference/: README.md  genes.md  quick-reference.md
docs/technical/systems/: README.md  balance-system.md  behavior-state.md  behavior-system.md  classification.md  combat-system.md  environmental-stress.md  headless-simulation.md  save-load-system.md  scent-system.md  spatial-index.md  water-system.md  world-system.md
docs/user/: README.md  getting-started.md  usage-guide.md
include/: calendar.hpp  colorPairs.hpp  fileHandling.hpp  timing.hpp  window.hpp
include/logging/: Logger.hpp
include/objects/: food.hpp  gameObject.hpp  spawner.hpp
include/rendering/: IInputHandler.hpp  IRenderer.hpp  KeyMappings.hpp  RenderSystem.hpp  RenderTypes.hpp
include/statistics/: genomeStats.hpp  statistics.hpp
include/world/: BiomeTypes.hpp  ClimateWorldGenerator.hpp  Corpse.hpp  CorpseManager.hpp  EnvironmentSystem.hpp  PlantManager.hpp  PlantSpatialIndex.hpp  ScentLayer.hpp  SeasonManager.hpp  SimplexNoise.hpp  SpatialIndex.hpp  WorldGenPNG.hpp  WorldGenerator.hpp  WorldGrid.hpp  tile.hpp  world.hpp
plans/: imgui-layout-redesign-plan.md
saves/: COOL_SEEDS.txt
saves/SAVE_01/: creatures.txt  world.txt
saves/SAVE_02/: creatures.txt  world.txt
scripts/: README.md  update-gene-counts.sh
src/: calendar.cpp  fileHandling.cpp  main.cpp  window.cpp
src/logging/: Logger.cpp
src/objects/: food.cpp  gameObject.cpp  spawner.cpp
src/rendering/: RenderSystem.cpp
src/statistics/: genomeStats.cpp  statistics.cpp
src/testing/: CMakeLists.txt  CalendarTest  FileTest  TestObjects  breedingDiagnostic.cpp  combatDiagnostic.cpp  compile_tests.sh  creatureTest  creatureTest.cpp  fileTest.cpp  headlessSimulation.cpp  movementDiagnostic.cpp  simulationDiagnostic.cpp  testCalendar.cpp  testNewGenome.cpp  testObjects.cpp  testStatistics.cpp  testTiming.cpp  testWorld.cpp  testWorldGen.cpp  test_combat_logging.cpp  test_performance_benchmark.cpp  test_profile_hotspots.cpp  test_world_generation.cpp  worldGenDemo.cpp
src/testing/balance/: AnalysisModule.hpp  ArchetypeProfiler.cpp  ArchetypeProfiler.hpp  BalanceConstraints.cpp  BalanceConstraints.hpp  BalanceFramework.hpp  BalanceOptimizer.cpp  BalanceOptimizer.hpp  ConstraintBuilders.cpp  ConstraintBuilders.hpp  ExploitDetector.cpp  ExploitDetector.hpp  ReportGenerator.cpp  ReportGenerator.hpp  SimplexSolver.cpp  SimplexSolver.hpp  TrophicAnalyzer.cpp  TrophicAnalyzer.hpp  balance_diagnostic.cpp  compile_balance.sh  test_balance_optimizer.cpp  test_simplex.cpp
src/testing/genetics/: compile_tests.sh  test_behavior_controller.cpp  test_behavior_feeding.cpp  test_behavior_plants.cpp  test_behavior_simulation.cpp  test_berry_bush_diagnostic.cpp  test_biome_variants.cpp  test_classification.cpp  test_combat_behavior.cpp  test_combat_system.cpp  test_core.cpp  test_creature_behavior_integration.cpp  test_creature_breeding.cpp  test_creature_gene_api.cpp  test_creature_movement.cpp  test_creature_state_machine.cpp  test_energy_budget.cpp  test_environmental_stress.cpp  test_expression.cpp  test_feeding_behavior.cpp  test_framework.hpp  test_health_healing.cpp  test_health_system.cpp  test_herbivore_feeding_diagnostic.cpp  test_hunting_behavior.cpp  test_interactions.cpp  test_main.cpp  test_mating_behavior.cpp  test_modulation_policy.cpp  test_movement_behavior.cpp  test_naming_system.cpp  test_olfactory_genes.cpp  test_organism_factory.cpp  test_pathfinding_sensitivity.cpp  test_perception_system.cpp  test_plant_copy.cpp  test_plants.cpp  test_reproducible_interface.cpp  test_rest_behavior.cpp  test_scent_layer.cpp  (+4 more)
src/testing/saves/: creatures.txt  world.txt
src/testing/world/: test_corpse_manager.cpp  test_environment_system.cpp  test_plant_manager.cpp  test_season_manager.cpp  test_spatial_index.cpp  test_world_generator.cpp  test_world_grid.cpp  test_world_organism_integration.cpp
src/world/: ClimateWorldGenerator.cpp  Corpse.cpp  CorpseManager.cpp  EnvironmentSystem.cpp  PlantManager.cpp  PlantSpatialIndex.cpp  ScentLayer.cpp  SeasonManager.cpp  SimplexNoise.cpp  SpatialIndex.cpp  WorldGenPNG.cpp  WorldGenerator.cpp  WorldGrid.cpp  tile.cpp  world.cpp
(+757 files in other folders)
